[metadata]
name = colcon-devtools
version = attr: colcon_devtools.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-devtools/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-devtools/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to provide information about all extension points and extensions
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true

[tool:pytest]
filterwarnings =
    error
junit_suite_name = colcon-devtools

[options.entry_points]
colcon_core.verb =
    extension-points = colcon_devtools.verb.extension_points:ExtensionPointsVerb
    extensions = colcon_devtools.verb.extensions:ExtensionsVerb
    version-check = colcon_devtools.verb.version_check:VersionCheckVerb

[flake8]
import-order-style = google
